tests/compiletests/ui/image/write_format_scalar.stderr
error[E0277]: the trait bound `f32: Vector<f32, _>` is not satisfied
  --> $DIR/write_format_scalar.rs:14:39
   |
LL |         image.write(UVec2::new(0, 1), texels);
   |               -----                   ^^^^^^ the trait `Vector<f32, _>` is not implemented for `f32`
   |               |
   |               required by a bound introduced by this call
   |
   = help: the following other types implement trait `Vector<T, N>`:
             `BVec2` implements `Vector<bool, 2>`
             `BVec3` implements `Vector<bool, 3>`
             `BVec4` implements `Vector<bool, 4>`
             `DVec2` implements `Vector<f64, 2>`
             `DVec3` implements `Vector<f64, 3>`
             `DVec4` implements `Vector<f64, 4>`
             `IVec2` implements `Vector<i32, 2>`
             `IVec3` implements `Vector<i32, 3>`
           and 8 others
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, spirv_std::::image::{impl#3}::{constant#0}, FORMAT, COMPONENTS>::write`
  --> /home/firestar99/workspace/rust-gpu/crates/spirv-std/src/image.rs:805:22
   |
LL |     pub unsafe fn write<I, const N: usize>(
   |                   ----- required by a bound in this associated function
...
LL |         texels: impl Vector<SampledType, N>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, spirv_std::::image::{impl#3}::{constant#0}, FORMAT, COMPONENTS>::write`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
